--- a/src/main/resources/templates/expense/expenses.html
+++ b/src/main/resources/templates/expense/expenses.html
@@ -51,14 +51,15 @@
 
                             <!-- Table body -->
                             <tbody id="demo">
-                            <th:block th:each="balance :${finalUserBalance}">
-                                <tr style="cursor: pointer">
-                                    <td th:text="${balance.getRelatedUser()}"></td>
-                                    <td>
-                                       <h5 th:classappend="${balance.getAmount() >= 0} ? text-info : text-danger" th:text="${balance.getAmount() + ' zł'}"></h5>
-                                    </td>
-                                </tr>
-                            </th:block>
+                            <tr th:each="balance :${finalUserBalance}" th:class="balanceRow">
+                                <td hidden th:text="${balance.getUserId()}" class="related-id"></td>
+                                <td th:text="${balance.getRelatedUser()}" th:class="related-email"></td>
+                                <td th:text="${balance.getAmount()}" hidden></td>
+                                <td>
+                                   <h5 th:classappend="${balance.getAmount() >= 0} ? text-info : text-danger" th:text="${balance.getAmount() + ' zł'}"
+                                       class="related-balance">></h5>
+                                </td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
@@ -75,202 +76,239 @@
             <div class="card my-3">
 
                 <h5 class="card-header blue darken-2 white-text text-center py-3">
-                    <strong>Nowy Wydatek</strong>
+                    <strong>Spłać dług</strong>
                 </h5>
 
                 <div class="card-body px-lg-5 pt-0">
+                    <form autocomplete="off" action="#" th:action="@{/expenses/pay}"
+                          th:object="${payDebtDto}" method="post" class="form-horizontal"
+                          role="form">
                     <div class="form-row mb-4 pt-4">
                         <div class="col">
                             <!-- First name -->
-                            <input type="text" placeholder="Tytuł" class="form-control" />
+                            <input type="text" th:field="*{lenderEmail}" placeholder="Email" class="form-control" id="lenderEmail" readonly/>
                         </div>
                         <div class="col">
                             <!-- Last name -->
-                            <input type="text"  placeholder="Kwota" class="form-control" />
+                            <input type="number"  th:field="*{amount}" placeholder="Kwota" class="form-control" id="lenderAmount"/>
                         </div>
                     </div>
-                    <input placeholder="Opis" class="form-control mb-4" />
                     <hr>
-                    <div class="table-wrapper-scroll-y my-custom-scrollbar overflow-auto">
-                        <table class="table bordered table-hover mb-0" id="testTable">
-                            <!-- Table head -->
-                            <thead>
-                            <tr class="table-fixed">
-                                <th>Znajomy</th>
-                                <th>Uczestnik Wydatku</th>
-                            </tr>
-                            </thead>
-                            <!-- Table head -->
-
-                            <!-- Table body -->
-                            <tbody id="members">
-                            <tr>
-                                <td >Jacek Placek</td>
-                                <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="defaultChecked2" checked>
-                                        <label class="custom-control-label" for="defaultChecked2"></label>
-                                    </div>
-                                </td>
-                            </tr>
-                            </tbody>
-                            <!-- Table body -->
-                        </table>
-                        <!-- Table  -->
-                    </div>
-                    <button class="btn btn-blue btn-block my-4 waves-effect z-depth-0" type="submit">Utworz</button>
+                    <button class="btn btn-blue btn-block my-4 waves-effect z-depth-0" type="submit" id="paybtn">Wyślij</button>
+                    </form>
                 </div>
             </div>
+            <!--<div class="card my-3">-->
+
+                <!--<h5 class="card-header blue darken-2 white-text text-center py-3">-->
+                    <!--<strong>Nowy Wydatek</strong>-->
+                <!--</h5>-->
+
+                <!--<div class="card-body px-lg-5 pt-0">-->
+                    <!--<div class="form-row mb-4 pt-4">-->
+                        <!--<div class="col">-->
+                            <!--&lt;!&ndash; First name &ndash;&gt;-->
+                            <!--<input type="text" placeholder="Tytuł" class="form-control" />-->
+                        <!--</div>-->
+                        <!--<div class="col">-->
+                            <!--&lt;!&ndash; Last name &ndash;&gt;-->
+                            <!--<input type="text"  placeholder="Kwota" class="form-control" />-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<input placeholder="Opis" class="form-control mb-4" />-->
+                    <!--<hr>-->
+                    <!--<div class="table-wrapper-scroll-y my-custom-scrollbar overflow-auto">-->
+                        <!--<table class="table bordered table-hover mb-0" id="testTable">-->
+                            <!--&lt;!&ndash; Table head &ndash;&gt;-->
+                            <!--<thead>-->
+                            <!--<tr class="table-fixed">-->
+                                <!--<th>Znajomy</th>-->
+                                <!--<th>Uczestnik Wydatku</th>-->
+                            <!--</tr>-->
+                            <!--</thead>-->
+                            <!--&lt;!&ndash; Table head &ndash;&gt;-->
+
+                            <!--&lt;!&ndash; Table body &ndash;&gt;-->
+                            <!--<tbody id="members">-->
+                            <!--<tr>-->
+                                <!--<td >Jacek Placek</td>-->
+                                <!--<td>-->
+                                    <!--<div class="custom-control custom-checkbox">-->
+                                        <!--<input type="checkbox" class="custom-control-input" id="defaultChecked2" checked>-->
+                                        <!--<label class="custom-control-label" for="defaultChecked2"></label>-->
+                                    <!--</div>-->
+                                <!--</td>-->
+                            <!--</tr>-->
+                            <!--</tbody>-->
+                            <!--&lt;!&ndash; Table body &ndash;&gt;-->
+                        <!--</table>-->
+                        <!--&lt;!&ndash; Table  &ndash;&gt;-->
+                    <!--</div>-->
+                    <!--<button class="btn btn-blue btn-block my-4 waves-effect z-depth-0" type="submit">Utworz</button>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
     </div>
 </div>
 
 
 
-<div class="container">
-    <div class="row">
-        <h2 th:text="${'Total balance: ' + totalBalance}"></h2>
-    </div>
-    <div class="row">
-        <div>
-            <ul class="nav nav-pills nav-justified">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/group/details/1/members}">Uczestnicy</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/group/details/1}">Szczegóły</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/group/details/1/planning}">Planowanie</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/group/details/1/expenses}">Wydatki</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/group/details/1/chat}">Chat</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-8">
-            <h3>ja mam zapłacic innym</h3>
-            <table class="table">
+<!--<div class="container">-->
+    <!--<div class="row">-->
+        <!--<h2 th:text="${'Total balance: ' + totalBalance}"></h2>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+        <!--<div>-->
+            <!--<ul class="nav nav-pills nav-justified">-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" th:href="@{/group/details/1/members}">Uczestnicy</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" th:href="@{/group/details/1}">Szczegóły</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" th:href="@{/group/details/1/planning}">Planowanie</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link active" th:href="@{/group/details/1/expenses}">Wydatki</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" th:href="@{/group/details/1/chat}">Chat</a>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+        <!--<div class="col-sm-8">-->
+            <!--<h3>ja mam zapłacic innym</h3>-->
+            <!--<table class="table">-->
 
-                <tbody>
-                <tr th:each="exp :${userHasToPay}" style="font-size: x-large">
+                <!--<tbody>-->
+                <!--<tr th:each="exp :${userHasToPay}" style="font-size: x-large">-->
 
-                    <td th:text="${exp.userId}"></td>
-                    <td th:text="${exp.getRelatedUser()}"></td>
-                    <td th:text="${exp.getAmount()}"></td>
+                    <!--<td th:text="${exp.userId}"></td>-->
+                    <!--<td th:text="${exp.getRelatedUser()}"></td>-->
+                    <!--<td th:text="${exp.getAmount()}"></td>-->
 
-                </tr>
+                <!--</tr>-->
 
-                </tbody>
-            </table>
-            <h3>inni mają mi zapłacic</h3>
-            <table class="table">
+                <!--</tbody>-->
+            <!--</table>-->
+            <!--<h3>inni mają mi zapłacic</h3>-->
+            <!--<table class="table">-->
 
-                <tbody>
-                <tr th:each="expense :${othersHaveToPay}" style="font-size: x-large">
-                    <td th:text="${expense.userId}"></td>
-                    <td th:text="${expense.getRelatedUser()}"></td>
-                    <td th:text="${expense.getAmount()}"></td>
+                <!--<tbody>-->
+                <!--<tr th:each="expense :${othersHaveToPay}" style="font-size: x-large">-->
+                    <!--<td th:text="${expense.userId}"></td>-->
+                    <!--<td th:text="${expense.getRelatedUser()}"></td>-->
+                    <!--<td th:text="${expense.getAmount()}"></td>-->
 
-                </tr>
+                <!--</tr>-->
 
-                </tbody>
-            </table>
-            <h3>balans</h3>
-            <table class="table">
+                <!--</tbody>-->
+            <!--</table>-->
+            <!--<h3>balans</h3>-->
+            <!--<table class="table">-->
 
-                <tbody>
-                <tr th:each="balance :${finalUserBalance}" style="font-size: x-large" class="balanceRow">
-                    <td th:text="${balance.userId}"></td>
-                    <td th:text="${balance.getRelatedUser()}"></td>
-                    <td th:text="${balance.getAmount()}"></td>
-                </tr>
+                <!--<tbody>-->
+                <!--<tr th:each="balance :${finalUserBalance}" style="font-size: x-large" class="balanceRow">-->
+                    <!--<td th:text="${balance.userId}"></td>-->
+                    <!--<td th:text="${balance.getRelatedUser()}"></td>-->
+                    <!--<td th:text="${balance.getAmount()}"></td>-->
+                <!--</tr>-->
 
-                </tbody>
-            </table>
-        </div>
-        <div class="col-sm-4">
-            <div>
-                <form autocomplete="off" action="#" th:action="@{/expenses/pay}"
-                      th:object="${payDebtDto}" method="post" class="form-horizontal"
-                      role="form">
-                    <h2>Spłać dług</h2>
-                    <div class="form-group">
-                        <div class="col-sm-9">
-                            <label th:if="${#fields.hasErrors('lenderEmail')}" th:errors="*{lenderEmail}"
-                                   class="validation-message"></label>
-                            <input type="text" th:field="*{lenderEmail}" placeholder="email" id="lenderEmail" readonly
-                                   class="form-control"/>
-                        </div>
-                        <div class="col-sm-9">
-                            <label th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}"
-                                   class="validation-message"></label>
-                            <input type="text" th:field="*{amount}" placeholder="kwota" id="lenderAmount"
-                                   class="form-control"/>
-                        </div>
-
-
-                    </div>
+                <!--</tbody>-->
+            <!--</table>-->
+        <!--</div>-->
+        <!--<div class="col-sm-4">-->
+            <!--<div>-->
+                <!--<form autocomplete="off" action="#" th:action="@{/expenses/pay}"-->
+                      <!--th:object="${payDebtDto}" method="post" class="form-horizontal"-->
+                      <!--role="form">-->
+                    <!--<h2>Spłać dług</h2>-->
+                    <!--<div class="form-group">-->
+                        <!--<div class="col-sm-9">-->
+                            <!--<label th:if="${#fields.hasErrors('lenderEmail')}" th:errors="*{lenderEmail}"-->
+                                   <!--class="validation-message"></label>-->
+                            <!--<input type="text" th:field="*{lenderEmail}" placeholder="email" id="lenderEmail" readonly-->
+                                   <!--class="form-control"/>-->
+                        <!--</div>-->
+                        <!--<div class="col-sm-9">-->
+                            <!--<label th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}"-->
+                                   <!--class="validation-message"></label>-->
+                            <!--<input type="text" th:field="*{amount}" placeholder="kwota" id="lenderAmount"-->
+                                   <!--class="form-control"/>-->
+                        <!--</div>-->
 
 
-                    <div class="form-group">
-                        <div class="col-sm-9">
-                            <button type="submit" class="btn btn-primary btn-block" id="paybtn">Zapłać!</button>
-                        </div>
-                    </div>
-
-                    <!--<span th:utext="${successMessage}"></span>-->
+                    <!--</div>-->
 
 
-                </form>
-            </div>
+                    <!--<div class="form-group">-->
+                        <!--<div class="col-sm-9">-->
+                            <!--<button type="submit" class="btn btn-primary btn-block" id="paybtn">Zapłać!</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
 
-        </div>
-    </div>
-</div>
+                    <!--&lt;!&ndash;<span th:utext="${successMessage}"></span>&ndash;&gt;-->
+
+
+                <!--</form>-->
+            <!--</div>-->
+
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 <script>
+    $( document ).ready(function(){
+        const balanceRows = $('.balanceRow');
+        console.log(balanceRows)
+        const userBalance = [];
+        var lenderEmail = $('#lenderEmail');
+        var lenderAmount = $('#lenderAmount');
+        for(var i = 0; i < balanceRows.length; i++){
+            const row = balanceRows[i];
+            // const userId = $(row).find('.related-id')
+            // const userEmail = $(row).find('.related-email')
+            // const ammount = +$(row).find('.related-balance')
 
-    const balanceRows = $('.balanceRow');
-    const userBalance = [];
-    var lenderEmail = $('#lenderEmail');
-    var lenderAmount = $('#lenderAmount');
-    for(var i = 0; i < balanceRows.length; i++){
-        const row = balanceRows[i];
-        const userId = row.children[0].innerText;
-        const userEmail = row.children[1].innerText;
-        const ammount = +row.children[2].innerText;
-        userBalance[userEmail] = -ammount;
-        if(ammount < 0) {
-            balanceRows[i].addEventListener('click', function () {
 
-                lenderEmail.val(userEmail);
-                lenderEmail.text(userEmail);
 
-                lenderAmount.val(-ammount);
-                lenderAmount.text(-ammount);
-                console.log(userId);
-                console.log(userEmail);
-                console.log(ammount);
+            const userId = row.children[0].innerText;
+            const userEmail = row.children[1].innerText;
+            const ammount = +row.children[2].innerText;
+            console.log('userId: ', userId);
+            console.log('email: ', userEmail);
+            console.log('balance: ', ammount);
+            userBalance[userEmail] = -ammount;
+            if(ammount < 0) {
+                balanceRows[i].addEventListener('click', function () {
 
-            })
+                    lenderEmail.val(userEmail);
+                    lenderEmail.text(userEmail);
+
+                    lenderAmount.val(-ammount);
+                    lenderAmount.text(-ammount);
+                    console.log(userId);
+                    console.log(userEmail);
+                    console.log(ammount);
+
+                })
+            }
         }
-    }
-    lenderAmount[0].addEventListener('input', function() {
-        var invalid = +lenderAmount.val() > +userBalance[lenderEmail.val()];
-        console.log(invalid);
-        var payBtn = $("#paybtn");
-        if(invalid){
-            payBtn.prop('disabled', true);
-        }else{
-            payBtn.removeAttr('disabled');
-        }
+        lenderAmount[0].addEventListener('input', function() {
+            var invalid = +lenderAmount.val() > +userBalance[lenderEmail.val()];
+            console.log(invalid);
+            var payBtn = $("#paybtn");
+            if(invalid){
+                payBtn.prop('disabled', true);
+            }else{
+                payBtn.removeAttr('disabled');
+            }
+        })
     })
+
 </script>
 
 </body>
