added group name to all tabs

--- a/src/main/resources/templates/group/groupDetails.html
+++ b/src/main/resources/templates/group/groupDetails.html
@@ -32,7 +32,7 @@
             <div class="card my-3">
                 <div class="card-header">
                     <ul class="nav nav-pills nav-justified">
-                        <h3 class="pr-5 mb-0 mr-5" th:text="${groupName}"></h3>
+                        <h3 class="pr-5 mb-0 mr-5" th:text="${travelGroupDto.name}"></h3>
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/group/details/__${groupId}__/members}">Uczestnicy</a>
                         </li>
