added pending invitations counter

--- a/src/main/resources/templates/notification/invitations.html
+++ b/src/main/resources/templates/notification/invitations.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" th:href="@{/css/addons/datatables.min.css}"/>
     <!-- DataTables JS -->
     <script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}" ></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 <div th:replace="common/header :: header"></div>
