fixed inviting users

--- a/src/main/resources/templates/group/groupDetailsMembers.html
+++ b/src/main/resources/templates/group/groupDetailsMembers.html
@@ -137,7 +137,7 @@
 
                                                             <div class="input-group-append">
                                                                 <button class="btn btn-md blue text-white m-0 px-3"
-                                                                        type="button" id="MaterialButton-addon2">Zaproś
+                                                                        id="MaterialButton-addon2">Zaproś
                                                                 </button>
                                                             </div>
                                                         </div>
