--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<div th:replace="common/header :: header"> </div>t
+<div th:replace="common/header :: header"> </div>
 
 <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
 	<div class="carousel-inner" style="max-height: 350px !important;" role="listbox">
