--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -32,8 +32,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form autocomplete="off" action="#" th:action="@{/registration}"
-                  th:object="${userEntity}" method="post" class="form-horizontal"
+            <form autocomplete="off" action="#" th:action="@{/edit-profile}"
+                  th:object="${editProfileDto}" method="post" class="form-horizontal"
                   role="form">
                 <h2>Your data</h2>
                 <div class="form-group">
@@ -55,12 +55,13 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="text" th:field="*{email}" placeholder="Email"
+                        <input type="text" th:field="*{avatarUrl}" placeholder="Avatar url"
                                class="form-control" /> <label
-                            th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+                            th:if="${#fields.hasErrors('avatarUrl')}" th:errors="*{avatarUrl}"
                             class="validation-message"></label>
                     </div>
                 </div>
+                <button class="btn blue text-white btn-block my-4" type="submit">Zapisz</button>
 
 
                 <div class="form-group">
