--- a/src/main/resources/templates/group/groupDetailsMembers.html
+++ b/src/main/resources/templates/group/groupDetailsMembers.html
@@ -113,7 +113,7 @@
                                     <!-- Table  -->
                                 </div>
                             </div>
-                            <div class="col-md-5 my-3 px-0">
+                            <div th:if="${groupVisibility.name() == 'PUBLIC' || browsingUserRole.name() == 'OWNER'}" class="col-md-5 my-3 px-0">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-12">
