--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <form th:action="@{/}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Przejdź do strony logowania</button>
 </form>
 
 <div class="container">
@@ -35,10 +35,10 @@
             <form autocomplete="off" action="#" th:action="@{/change-password}"
                   th:object="${changePasswordDto}" method="post" class="form-horizontal"
                   role="form">
-                <h2>Change password Form</h2>
+                <h2>Zmiana hasła</h2>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="password" th:field="*{oldPassword}" placeholder="Old Password"
+                        <input type="password" th:field="*{oldPassword}" placeholder="Stare hasło"
                                class="form-control" />
                         <label th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}"
                                class="validation-message"></label>
@@ -50,14 +50,14 @@
                         <label	th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"
                                   class="validation-message"></label>
                         <input type="password" th:field="*{newPassword}"
-                               placeholder="New Password" class="form-control" />
+                               placeholder="Nowe hasło" class="form-control" />
                     </div>
                 </div>
 
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block">Change!</button>
+                        <button type="submit" class="btn btn-primary btn-block">Zmień</button>
                     </div>
                 </div>
 
