--- a/src/main/resources/templates/group/groupDetails.html
+++ b/src/main/resources/templates/group/groupDetails.html
@@ -116,7 +116,7 @@
                                                         th:disabled="${!viewerIsOrganizer}"
                                                         th:hidden="${!viewerIsOrganizer}"
                                                         class="btn btn-blue btn-block my-2 waves-effect z-depth-0">
-                                                    Zapisz zmiany!
+                                                    Zapisz zmiany
                                                 </button>
                                             </div>
                                         </div>
