--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -86,7 +86,7 @@
                             <!-- Table  -->
                         </div>
                         <!-- Sign in button -->
-                        <button class="btn btn-blue btn-block my-4 waves-effect z-depth-0" type="submit">Utworz</button>
+                        <button class="btn btn-blue btn-block my-4 waves-effect z-depth-0" type="submit">Utwórz</button>
                     </form>
                     <!-- Form -->
                 </div>
@@ -98,7 +98,7 @@
 
                 <div class="card-header blue darken-2 lighten-1 white-text text-center py-3 d-flex">
                     <strong class="h5 flex-grow-1 px-2">Moje grupy</strong>
-                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                    <input class="form-control" type="text" placeholder="Szukaj" aria-label="Search">
                 </div>
 
                 <!--Card content-->
