--- a/src/main/resources/templates/friend/blocked.html
+++ b/src/main/resources/templates/friend/blocked.html
@@ -53,7 +53,7 @@
                                         <!-- Table head -->
                                         <thead>
                                         <tr class="table-fixed">
-                                            <th>Imie</th>
+                                            <th>Imię</th>
                                             <th>Nazwisko</th>
                                             <th>Akcje</th>
                                         </tr>
@@ -113,7 +113,7 @@
                                                             <div class="form-group">
                                                                 <button type="submit"
                                                                         class="btn btn-blue btn-block my-2 waves-effect z-depth-0">
-                                                                    Zablokuj!
+                                                                    Zablokuj
                                                                 </button>
                                                             </div>
                                                         </div>
