--- a/src/main/resources/templates/group/groupDetailsMembers.html
+++ b/src/main/resources/templates/group/groupDetailsMembers.html
@@ -189,7 +189,7 @@
                                                             </div>
                                                             <!-- Sign in button -->
                                                             <button class="btn btn-blue btn-block waves-effect z-depth-0 mb-1"
-                                                                    type="submit">Dodaj!
+                                                                    type="submit">Dodaj
                                                             </button>
                                                         </form>
                                                     </div>
