--- a/src/main/resources/templates/notification/invitations.html
+++ b/src/main/resources/templates/notification/invitations.html
@@ -36,7 +36,7 @@
 
                 <td th:text="${invite.groupName}"></td>
                 <td th:text="${invite.invitationSourceEmail}"></td>
-                <
+                
                 <td>
                     <form autocomplete="off" action="#" th:action="@{/group/invite/status}"
                           th:object="${statusChangeRequest}" method="post" class="form-horizontal"
@@ -49,7 +49,7 @@
 
                         <div class="form-group">
                             <div class="col-sm-9">
-                                <button type="submit" class="btn btn-primary btn-block">Przyjmij!</button>
+                                <button type="submit" class="btn btn-primary btn-block">Przyjmij</button>
                             </div>
                         </div>
 
