--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Registration Form</title>
+    <title>Dane użytkownika</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -35,12 +35,12 @@
             <form autocomplete="off" action="#" th:action="@{/edit-profile}"
                   th:object="${editProfileDto}" method="post" class="form-horizontal"
                   role="form">
-                <h2>Your data</h2>
+                <h2>Twoje dane</h2>
                 <div class="form-group">
                     <div class="col-sm-9">
                         <label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
                                class="validation-message"></label>
-                        <input type="text" th:field="*{firstName}" placeholder="First Name"
+                        <input type="text" th:field="*{firstName}" placeholder="Imię"
                                class="form-control" />
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                         <label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
                                   class="validation-message"></label>
                         <input type="text" th:field="*{lastName}"
-                               placeholder="Last Name" class="form-control" />
+                               placeholder="Nazwisko" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -66,7 +66,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <a th:href="@{/change-password}">Change Password</a>
+                        <a th:href="@{/change-password}">Zmień hasło</a>
                     </div>
                 </div>
 
