Main page titles, questions look, centered nav

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -34,7 +34,7 @@
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse " id="navbarSupportedContent-555">
-		<ul class="navbar-nav ml-auto">
+		<ul class="navbar-nav mx-auto">
 			<li class="nav-item">
 				<a class="nav-link" th:href="@{/}">Home
 					<span class="sr-only">(current)</span>
