--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,15 +27,15 @@
 
 <div th:replace="common/header :: header"> </div>
 
-<div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
-	<div class="carousel-inner" style="max-height: 350px !important;" role="listbox">
+<div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half text-center" data-ride="carousel">
+	<div class="carousel-inner" style="max-height: 30em !important;" role="listbox">
 		<div class="carousel-item active">
 			<video class="video-fluid" autoplay loop muted>
 				<source src="https://mdbootstrap.com/img/video/Tropical.mp4" type="video/mp4"/>
 			</video>
 			<div class="carousel-caption pb-5" style="top: 5rem !important; text-align: left">
-				<h1 class="h1-responsive">On The Way</h1>
-				<p>Zaplanuj... wszystko</p>
+				<h1 class="h1-responsive main-page-title">On The Way</h1>
+				<p class="h5 main-page-sub-title">Zaplanuj... wszystko</p>
 			</div>
 		</div>
 	</div>
