--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,11 +4,12 @@
     min-height: 40vh;
     overflow: auto;
 }
+
 .table-wrapper-scroll-y {
     display: block;
 }
 
-.sm-custom-scrollbar{
+.sm-custom-scrollbar {
     position: relative;
     max-height: 10rem;
     min-height: 20rem;
@@ -17,4 +18,27 @@
 
 body {
     font-family: 'Ubuntu', sans-serif;
+}
+
+.main-page-title {
+    font-size: 2.7em;
+    -webkit-text-stroke-width: medium;
+    letter-spacing: 0.25em;
+    text-shadow: 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black;
+}
+
+.main-page-sub-title {
+    -webkit-text-stroke-width: thin;
+    letter-spacing: 0.2em;
+    text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black;
+}
+
+.question-active {
+    outline: solid 0.6em deepskyblue;
+    background: aliceblue;
+}
+
+.question-disabled {
+    outline: solid 0.6em darkgray;
+    background: lightgray;
 }
