home page, header and footer rework

--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <!--Footer-->
-<footer class="page-footer fixed-bottom font-small blue lighten-1" th:fragment="footer">
+<footer class="page-footer font-small blue lighten-1" th:fragment="footer">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2019 Copyright:
