--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -18,10 +18,11 @@
 
 body {
     font-family: 'Ubuntu', sans-serif;
+    background: #eee;
 }
 
 .main-page-title {
-    font-size: 2.7em;
+    font-size: 2.6em;
     -webkit-text-stroke-width: medium;
     letter-spacing: 0.25em;
     text-shadow: 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black;
@@ -41,4 +42,43 @@ body {
 .question-disabled {
     outline: solid 0.6em darkgray;
     background: lightgray;
+}
+
+.public-group-cell {
+    padding: 0.5em;
+    border: solid 0.2em #42a5f5;
+    background: azure;
+    border-radius: 0.5em;
+}
+
+.public-group-cell:visited {
+    text-decoration: none;
+}
+
+.public-group-cell:link {
+    text-decoration: none;
+}
+
+.public-group-cell:hover {
+    text-decoration: none;
+    background: darkturquoise;
+}
+
+.public-group-cell-destination {
+    color: #F6511D;
+    -webkit-text-stroke-width: thin;
+    letter-spacing: 0.15em;
+    margin: 0.4em auto;
+}
+
+.public-group-cell-image {
+    width: 100%;
+    height: 100%;
+    padding: 0.5em;
+    display: flex;
+    margin-bottom: 1em;
+}
+
+.clamp-width{
+    max-width: 1200px;
 }
