--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -53,11 +53,12 @@
                     <a class="nav-link" th:href="@{/expenses}">Wydatki</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a id="invites-count" class="nav-link waves-effect waves-light">
-                        <div th:href="@{/notification/invitations}">
+                    <a th:href="@{/notification/invitations}" class="nav-link waves-effect waves-light d-flex">
+                        Zaproszenia
+                        <div id="invites-count" class="ml-1">
                             0
                         </div>
-                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-envelope m-1"></i>
                     </a>
                 </li>
             </ul>
